First try to fix stretching-logo bug in all mobile devices

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -93,6 +93,8 @@ svg {
   align-items: center;
 }
 .container-topHeader .container-whole-info .container-icons .fb, .container-topHeader .container-whole-info .container-icons .tw, .container-topHeader .container-whole-info .container-icons .ig {
+  display: block;
+  height: 16px;
   color: #ffffff;
 }
 
@@ -262,14 +264,12 @@ svg {
   top: -208px;
   overflow-x: hidden;
   margin: 0;
-  /* padding: 50px 30px 30px 60px; */
-  transition: 0.5s;
+  transition: top 0.5s ease, box-shadow 0.5s;
   width: 100%;
   text-align: center;
   padding-top: 40px;
   padding-bottom: 10px;
   z-index: 2;
-  /* box-shadow: 0px 3px 10px #919191; */
   box-shadow: 0px 3px 10px transparent;
 }
 #mySidenav li a {
